src/test/testFiles/invalid/semanticErrors/incorrectArgTypeForPush.manimdsl
let x = new Stack;
let y = new Stack;
x.push(y);